Fixed system console sidebar shifting upwards on Firefox (#3509)

--- a/webapp/sass/routes/_admin-console.scss
+++ b/webapp/sass/routes/_admin-console.scss
@@ -261,6 +261,7 @@
     height: 100%;
     left: 0;
     position: absolute;
+    top: 0;
     width: 220px;
     z-index: 5;
 
